--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,14 +1,19 @@
-# dev environment
-FROM node:20-alpine
+# build environment
+FROM node:20-slim As base
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
 
-WORKDIR /app
+FROM base As build
+COPY . /usr/src/app
+WORKDIR  /usr/src/app
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN pnpm run -r build
 
-COPY pnpm-lock.yaml package.json ./
-
-RUN npm install -g pnpm && pnpm install
-
-COPY . .
-
-EXPOSE 5173
-
-CMD ["sh", "-c", "pnpm run dev"]
+# production environment.
+FROM nginx:1.17.8-alpine
+COPY --from=build /usr/src/app/dist /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
