--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,8 +1,15 @@
 # dev environment
+
 FROM node:20-alpine
+
 WORKDIR /app
+
 COPY pnpm-lock.yaml package.json ./
-RUN pnpm install
+
+RUN npm install -g pnpm && pnpm install
+
 COPY . .
+
 EXPOSE 5173
-CMD ["pnpm", "dev"]
+
+CMD ["sh", "-c", "pnpm run dev"]
