--- a/.github/workflows/dev-image-builder.yaml
+++ b/.github/workflows/dev-image-builder.yaml
@@ -36,3 +36,11 @@ jobs:
               file: ./frontend/Dockerfile.dev
               push: true
               tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system:dev
+
+         - name: Build and Push - Backend Image
+           uses: docker/build-push-action@v5
+           with:
+              context: ./backend
+              file: ./backend/Dockerfile.dev
+              push: true
+              tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system-backend:dev
