--- a/.github/workflows/image-builder.yaml
+++ b/.github/workflows/image-builder.yaml
@@ -1,4 +1,4 @@
-name: Docker Image CI - Dev (For ghcr.io)
+name: Docker Image CI (For ghcr.io)
 
 on:
    pull_request:
@@ -31,13 +31,16 @@ jobs:
               username: ${{ github.actor }}
               password: ${{ secrets.GITHUB_TOKEN }}
 
+         - name: Determine Branch Name
+           run: echo "BRANCH_NAME=$(echo ${{ github.ref }} | awk -F'/' '{print $NF}')" >> $GITHUB_ENV
+
          - name: Build and Push - Frontend Image
            uses: docker/build-push-action@v5
            with:
               context: ./frontend
               file: ./frontend/Dockerfile.${{ github.ref }}
               push: true
-              tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system-frontend:${{ github.ref }}
+              tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system-frontend:${{ env.BRANCH_NAME }}
 
          - name: Build and Push - Backend Image
            uses: docker/build-push-action@v5
@@ -45,4 +48,4 @@ jobs:
               context: ./backend
               file: ./backend/Dockerfile.${{ github.ref }}
               push: true
-              tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system-backend:${{ github.ref }}
+              tags: ghcr.io/${{ env.GITHUB_USERNAME }}/online-class-management-system-backend:${{ env.BRANCH_NAME }}
