Refactor Dockerfile to use pnpm run build instead of pnpm run -r build

--- a/frontend/Dockerfile.main
+++ b/frontend/Dockerfile.main
@@ -8,7 +8,7 @@ FROM base As build
 COPY . /usr/src/app
 WORKDIR  /usr/src/app
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-RUN pnpm run -r build
+RUN pnpm run build
 
 # production environment.
 FROM nginx:1.17.8-alpine
