--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
       "cors": "^2.8.5",
       "dotenv": "^16.4.1",
       "express": "^4.18.2",
+      "firebase-admin": "^12.0.0",
       "jsonwebtoken": "^9.0.2",
       "mailgen": "^2.0.28",
       "mongodb-memory-server": "^9.1.6",
