--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "firebase": "^10.8.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
