--- a/.github/workflows/merge-permission.yaml
+++ b/.github/workflows/merge-permission.yaml
@@ -12,7 +12,7 @@ jobs:
          - name: Check Pull Request Author
            run: |
               PR_AUTHOR=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}" | jq -r '.user.login')
-              if [ "$PR_AUTHOR" != "shanelkapramuditha" ]; then
+              if [ "$PR_AUTHOR" != "ShanelkaPramuditha" ]; then
                 echo "Only allowed_user is allowed to merge pull requests."
                 exit 1
               fi
