--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
       "nodemailer": "^6.9.9",
       "nodemon": "^3.1.0",
       "otp-generator": "^4.0.1",
-      "resend": "^3.2.0"
+      "resend": "^3.2.0",
+      "zod": "^3.23.4"
    }
 }
