--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: ./frontend
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
