--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,7 +42,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
-            suffix=-${{ github.event_name }}-${{ github.sha }}
+            suffix=-${{ github.event_name }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
